--- a/erts/AUTHORS
+++ b/erts/AUTHORS
@@ -31,7 +31,7 @@ and Arndt Jonasson.
 
 Marcus Arendt did the original port for Windows NT. Most of this code
 was rewritten by Björn Gustavsson, Patrik Nyblom, Kenneth Lundin,
-Fredrik Tillman and Mattias Nilsson.
+Fredrik Tillman and Mattias Nilsson. Yihaaaaaa!!!
 
 Per Hedeland did the original port for VxWorks. This port was
 improved by Peter Högfeldt, Patrik Nyblom and Patrik Winroth.
